--- a/app/src/site/style/main.scss
+++ b/app/src/site/style/main.scss
@@ -291,6 +291,16 @@
     background-color:black;
     width:100%;
     overflow:hidden;
+    .paperheader-image-bg{
+        position: absolute;
+        left:0;
+        top:0;
+        right:0;
+        bottom:0;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: bottom center;
+    }
     .paperheader-bg{
         position: absolute;
         left:0;
