--- a/app/src/site/template/sitetemp.html
+++ b/app/src/site/template/sitetemp.html
@@ -145,6 +145,12 @@
 <div class="papercontent">
     <div class="papercontent-con" data-find="content"></div>
 </div>
+<!--[noadminhead]-->
+<div class="adminhead-nav">
+    <div class="adminhead-nav-con" style="text-align: left">
+        <a href="index" class="adminhead-nav-item">index</a>
+    </div>
+</div>
 <!--[nofind]-->
 <div class="nofind-img">
     <div class="nofind-img-con"><img src="site/style/images/logo.png"/></div>
